docs/source/cli/2.12/index.md
---
title: nkp
sidebar_label: nkp
sidebar_position: 0
cli_generated: true
unlisted: true
hide_table_of_contents: true
displayed_sidebar: tutorialSidebar
nkp_minor: 2.12
nkp_patch: 2.12.2
nkp_command_id: nkp
nkp_command_kind: parent
---

<div class="cli-doc-ref" aria-hidden="true"></div>

### Available commands

* [nkp attach](nkp_attach.md) — Attach one of \[cluster\]
* [nkp check](nkp_check.md) — Check, one of \[cluster\]
* [nkp cluster](nkp_cluster.md) — Get cluster information
* [nkp completion](nkp_completion.md) — Generate the autocompletion script for the specified shell
* [nkp config](nkp_config.md) — Manage Kommander configuration
* [nkp create](nkp_create.md) — Create one of \[appdeployment, bootstrap, capi-components, catalog, chart-bundle, cluster, image, image-bundle, nodepool, package-bundle, workspace\]
* [nkp delete](nkp_delete.md) — Delete one of \[bootstrap, capi-components, chart, cluster, nodepool\]
* [nkp describe](nkp_describe.md) — Describe one of \[cluster\]
* [nkp detach](nkp_detach.md) — Detach one of \[cluster\]
* [nkp diagnose](nkp_diagnose.md) — Generate a support bundle
* [nkp edit](nkp_edit.md) — Edit a resource on the server
* [nkp get](nkp_get.md) — Get one of \[appdeployments, chart, clusters, dashboard, kubeconfig, nodepools, workspaces\]
* [nkp import](nkp_import.md) — Import images from an image bundle into Containerd
* [nkp install](nkp_install.md) — Install one of \[kommander\]
* [nkp move](nkp_move.md) — Move one of \[capi-resources\]
* [nkp open](nkp_open.md) — Open one of \[dashboard\]
* [nkp push](nkp_push.md) — Push one of \[bundle, chart, chart-bundle, image-bundle\]
* [nkp scale](nkp_scale.md) — Scale one of \[nodepool\]
* [nkp serve](nkp_serve.md) — Serve image or Helm chart bundles from an OCI registry
* [nkp update](nkp_update.md) — Update one of \[bootstrap (cluster), controlplane, nodepool\]
* [nkp upgrade](nkp_upgrade.md) — Upgrade one of \[addons, capi-components, catalogapp, cluster, kommander, workspace\]
* [nkp upload](nkp_upload.md) — Collect and upload telemetry information
* [nkp version](nkp_version.md) — Print version information
